# paclook

./: .clangd  .dockerignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
docker/: Dockerfile.alpine  Dockerfile.arch  Dockerfile.fedora  Dockerfile.homebrew  Dockerfile.nixos  Dockerfile.opensuse  Dockerfile.ubuntu  Dockerfile.void  test.sh
src/: app.cpp  app.cppm  app.hpp  main.cpp  package.cppm  package.hpp  provider.cppm  provider.hpp  terminal.cpp  terminal.cppm  terminal.hpp  util.cppm  util.hpp
src/providers/: apk.cpp  apk.cppm  apk.hpp  apt.cpp  apt.cppm  apt.hpp  brew.cpp  brew.cppm  brew.hpp  dnf.cpp  dnf.cppm  dnf.hpp  nix.cpp  nix.cppm  nix.hpp  pacman.cpp  pacman.cppm  pacman.hpp  paru.cpp  paru.cppm  paru.hpp  xbps.cpp  xbps.cppm  xbps.hpp  yay.cpp  yay.cppm  yay.hpp  zypper.cpp  zypper.cppm  zypper.hpp
